typing animation for landing page added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/d58eb19ed0.js"></script>
     <script src="scripts/nav.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/nav.css">
@@ -24,13 +24,13 @@
         <span class="line middle"></span>
         <span class="line bottom"></span>
     </div>
-    <div id="scroll-to-top" class="nav-btn"><i class="fas fa-arrow-up"></i></div>
+    <div id="scroll-to-top" class="nav-btn no-select"><i class="fas fa-arrow-up"></i></div>
     <div id="menu-overlay"></div>
-    <div id="menu-sidebar" class="side-bar">
+    <div id="menu-sidebar" class="side-bar no-select">
         <img class="profile-pic" src="static/images/profile.jpg">
         <div class="profile-title profile-text">
-            <div class="profile-name">Drew Goodman</div>
-            <div class="profile-job">Full Stack Web Developer</div>
+            <div class="profile-name">Drew R. Goodman //</div>
+            <div class="profile-job">  Full Stack Web Developer</div>
         </div>
         <div class="profile-item profile-links profile-text">
             <a href='#home'>Home</a>
@@ -51,8 +51,8 @@
     <div class="page-container">
         <div class="page-content-wrapper">
             <div id="home">
-                <div class="home-wrapper home-shader">
-                    <div class="home-intro-text"><h1>Hello, my name is Drew.</h1></div>
+                <div class="home-wrapper home-shader no-select">
+                    <div class="home-intro-text"><h1>Hi there, my name is Drew.</h1></div>
                     <div class="home-intro-text"><h2>I'm a Full Stack Web Developer.</h2></div>
                     <div class="home-buttons">
                         <a id="viewworks-btn" class="home-btn" href="#portfolio">View Works</a>
