--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/sidebar.css">
     <link rel="stylesheet" href="styles/media.css">
@@ -30,7 +31,7 @@
         <img class="profile-pic" src="static/images/profile.jpg">
         <div class="profile-title profile-text">
             <div class="profile-name">Drew R. Goodman //</div>
-            <div class="profile-job">  Full Stack Web Developer</div>
+            <div class="profile-job"> Full Stack Web Developer</div>
         </div>
         <div class="profile-item profile-links profile-text">
             <a href='#home'>Home</a>
@@ -52,8 +53,12 @@
         <div class="page-content-wrapper">
             <div id="home">
                 <div class="home-wrapper home-shader no-select">
-                    <div class="home-intro-text"><h1>Hi there, my name is Drew.</h1></div>
-                    <div class="home-intro-text"><h2>I'm a Full Stack Web Developer.</h2></div>
+                    <div class="home-intro-text">
+                        <h1>Hi there, my name is Drew.</h1>
+                    </div>
+                    <div class="home-intro-text">
+                        <h2>I'm a Full Stack Web Developer.</h2>
+                    </div>
                     <div class="home-buttons">
                         <a id="viewworks-btn" class="home-btn" href="#portfolio">View Works</a>
                         <a id="getintouch-btn" class="home-btn" href="#contact">Get in touch</a>
@@ -61,7 +66,7 @@
                 </div>
             </div>
             <div class="page-content" id="skills">
-                <h1>About Me</h1>
+                <h3>About Me</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
                     aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
                     tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
@@ -85,53 +90,99 @@
                     exercitationem facere cupiditate consequatur suscipit officia quia!</p>
                 <br><br><br>
             </div>
-            <div class="page-content" id="portfolio">
-                <h1>Recent Works</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
-                    aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
-                    tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
-                    deserunt porro. Tenetur odit sunt omnis quia nisi iusto architecto recusandae exercitationem animi
-                    tempora? Corrupti odit dolor dicta itaque, quas voluptas aspernatur, sequi porro accusantium nemo,
-                    fuga fugiat numquam? Exercitationem nisi beatae aliquid sed sit omnis nulla eveniet, dolorem non
-                    optio a expedita fugiat cumque aut ducimus officiis, in accusamus sint! Eligendi tempora natus ipsam
-                    vitae illo voluptates itaque harum sapiente numquam reprehenderit excepturi quo beatae animi eum
-                    placeat ratione totam quas sit temporibus voluptatum deserunt ipsa, ut adipisci id. Est quos
-                    exercitationem facere cupiditate consequatur suscipit officia quia!</p>
-                <br><br><br>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
-                    aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
-                    tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
-                    deserunt porro. Tenetur odit sunt omnis quia nisi iusto architecto recusandae exercitationem animi
-                    tempora? Corrupti odit dolor dicta itaque, quas voluptas aspernatur, sequi porro accusantium nemo,
-                    fuga fugiat numquam? Exercitationem nisi beatae aliquid sed sit omnis nulla eveniet, dolorem non
-                    optio a expedita fugiat cumque aut ducimus officiis, in accusamus sint! Eligendi tempora natus ipsam
-                    vitae illo voluptates itaque harum sapiente numquam reprehenderit excepturi quo beatae animi eum
-                    placeat ratione totam quas sit temporibus voluptatum deserunt ipsa, ut adipisci id. Est quos
-                    exercitationem facere cupiditate consequatur suscipit officia quia!</p>
-                <br><br><br>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
-                    aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
-                    tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
-                    deserunt porro. Tenetur odit sunt omnis quia nisi iusto architecto recusandae exercitationem animi
-                    tempora? Corrupti odit dolor dicta itaque, quas voluptas aspernatur, sequi porro accusantium nemo,
-                    fuga fugiat numquam? Exercitationem nisi beatae aliquid sed sit omnis nulla eveniet, dolorem non
-                    optio a expedita fugiat cumque aut ducimus officiis, in accusamus sint! Eligendi tempora natus ipsam
-                    vitae illo voluptates itaque harum sapiente numquam reprehenderit excepturi quo beatae animi eum
-                    placeat ratione totam quas sit temporibus voluptatum deserunt ipsa, ut adipisci id. Est quos
-                    exercitationem facere cupiditate consequatur suscipit officia quia!</p>
-                <br><br><br>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
-                    aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
-                    tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
-                    deserunt porro. Tenetur odit sunt omnis quia nisi iusto architecto recusandae exercitationem animi
-                    tempora? Corrupti odit dolor dicta itaque, quas voluptas aspernatur, sequi porro accusantium nemo,
-                    fuga fugiat numquam? Exercitationem nisi beatae aliquid sed sit omnis nulla eveniet, dolorem non
-                    optio a expedita fugiat cumque aut ducimus officiis, in accusamus sint! Eligendi tempora natus ipsam
-                    vitae illo voluptates itaque harum sapiente numquam reprehenderit excepturi quo beatae animi eum
-                    placeat ratione totam quas sit temporibus voluptatum deserunt ipsa, ut adipisci id. Est quos
-                    exercitationem facere cupiditate consequatur suscipit officia quia!</p>
+            <div class="page-content off-white" id="portfolio">
+                <h3>Recent Works</h3>
+                <div class="projects-container">
+
+                    <div class="project-wrapper"
+                        style="background-image: url('../static/images/project/todo-list.png')">
+                        <div class="project-actions project-bg">
+                            <i class="fas fa-desktop"></i>Live
+                            <i class="fas fa-code"></i>Repo
+                            <i class="fas fa-camera"></i>Info
+                        </div>
+                        <div class="project-title">jQuery To-Do List</div>
+                        <span class="project-divider"></span>
+                        <span class="project-shader"></span>
+                        <div class="project-desc project-bg">Basic to-do list with completion tab an</div>
+                        <div class="project-skills-wrapper">
+                            <div class="project-skill">HTML5</div>
+                            <div class="project-skill">CSS3</div>
+                            <div class="project-skill">jQuery</div>
+                        </div>
+                    </div>
+                    <div class="project-wrapper"
+                        style="background-image: url('../static/images/project/todo-list.png')">
+                        <div class="project-actions project-bg">
+                            <i class="fas fa-desktop"></i>Live
+                            <i class="fas fa-code"></i>Repo
+                            <i class="fas fa-camera"></i>Info
+                        </div>
+                        <div class="project-title">jQuery To-Do List</div>
+                        <span class="project-divider"></span>
+                        <span class="project-shader"></span>
+                        <div class="project-desc project-bg">Basic to-do list with completion tab an</div>
+                        <div class="project-skills-wrapper">
+                            <div class="project-skill">HTML5</div>
+                            <div class="project-skill">CSS3</div>
+                            <div class="project-skill">jQuery</div>
+                        </div>
+                    </div>
+                    <div class="project-wrapper"
+                        style="background-image: url('../static/images/project/todo-list.png')">
+                        <div class="project-actions project-bg">
+                            <i class="fas fa-desktop"></i>Live
+                            <i class="fas fa-code"></i>Repo
+                            <i class="fas fa-camera"></i>Info
+                        </div>
+                        <div class="project-title">jQuery To-Do List</div>
+                        <span class="project-divider"></span>
+                        <span class="project-shader"></span>
+                        <div class="project-desc project-bg">Basic to-do list with completion tab an</div>
+                        <div class="project-skills-wrapper">
+                            <div class="project-skill">HTML5</div>
+                            <div class="project-skill">CSS3</div>
+                            <div class="project-skill">jQuery</div>
+                        </div>
+                    </div>
+                    <div class="project-wrapper"
+                        style="background-image: url('../static/images/project/todo-list.png')">
+                        <div class="project-actions project-bg">
+                            <i class="fas fa-desktop"></i>Live
+                            <i class="fas fa-code"></i>Repo
+                            <i class="fas fa-camera"></i>Info
+                        </div>
+                        <div class="project-title">jQuery To-Do List</div>
+                        <span class="project-divider"></span>
+                        <span class="project-shader"></span>
+                        <div class="project-desc project-bg">Basic to-do list with completion tab an</div>
+                        <div class="project-skills-wrapper">
+                            <div class="project-skill">HTML5</div>
+                            <div class="project-skill">CSS3</div>
+                            <div class="project-skill">jQuery</div>
+                        </div>
+                    </div>
+                    <div class="project-wrapper"
+                        style="background-image: url('../static/images/project/todo-list.png')">
+                        <div class="project-actions project-bg">
+                            <i class="fas fa-desktop"></i>Live
+                            <i class="fas fa-code"></i>Repo
+                            <i class="fas fa-camera"></i>Info
+                        </div>
+                        <div class="project-title">jQuery To-Do List</div>
+                        <span class="project-divider"></span>
+                        <span class="project-shader"></span>
+                        <div class="project-desc project-bg">Basic to-do list with completion tab an</div>
+                        <div class="project-skills-wrapper">
+                            <div class="project-skill">HTML5</div>
+                            <div class="project-skill">CSS3</div>
+                            <div class="project-skill">jQuery</div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="page-content" id="contact">
+                <h3>Get in Touch?</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
                     aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
                     tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
@@ -143,27 +194,6 @@
                     placeat ratione totam quas sit temporibus voluptatum deserunt ipsa, ut adipisci id. Est quos
                     exercitationem facere cupiditate consequatur suscipit officia quia!</p>
                 <br><br><br>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
-                    aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
-                    tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
-                    deserunt porro. Tenetur odit sunt omnis quia nisi iusto architecto recusandae exercitationem animi
-                    tempora? Corrupti odit dolor dicta itaque, quas voluptas aspernatur, sequi porro accusantium nemo,
-                    fuga fugiat numquam? Exercitationem nisi beatae aliquid sed sit omnis nulla eveniet, dolorem non
-                    optio a expedita fugiat cumque aut ducimus officiis, in accusamus sint! Eligendi tempora natus ipsam
-                    vitae illo voluptates itaque harum sapiente numquam reprehenderit excepturi quo beatae animi eum
-                    placeat ratione totam quas sit temporibus voluptatum deserunt ipsa, ut adipisci id. Est quos
-                    exercitationem facere cupiditate consequatur suscipit officia quia!</p>
-                <br><br><br>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
-                    aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
-                    tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
-                    deserunt porro. Tenetur odit sunt omnis quia nisi iusto architecto recusandae exercitationem animi
-                    tempora? Corrupti odit dolor dicta itaque, quas voluptas aspernatur, sequi porro accusantium nemo,
-                    fuga fugiat numquam? Exercitationem nisi beatae aliquid sed sit omnis nulla eveniet, dolorem non
-                    optio a expedita fugiat cumque aut ducimus officiis, in accusamus sint! Eligendi tempora natus ipsam
-                    vitae illo voluptates itaque harum sapiente numquam reprehenderit excepturi quo beatae animi eum
-                    placeat ratione totam quas sit temporibus voluptatum deserunt ipsa, ut adipisci id. Est quos
-                    exercitationem facere cupiditate consequatur suscipit officia quia!</p>
             </div>
             <div class="page-footer">
                 &copy; 2020 Drew Goodman &#124; All rights reserved
