dynamically generated portfolio items via javascript

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/d58eb19ed0.js"></script>
     <script src="scripts/nav.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Special+Elite&display=swap" rel="stylesheet">
+    <script src="scripts/portfolio.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Special+Elite|Share+Tech+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/portfolio.css">
@@ -92,25 +93,25 @@
             </div>
             <div class="page-content off-white" id="portfolio">
                 <h3>Recent Works</h3>
-                <div class="projects-container">
-
-                    <div class="project-wrapper"
+                <div id="projects-container">
+                    <!-- PLACEHOLDER FOR JAVASCRIPT REFERENCE -->
+                    <!-- <div class="project-wrapper"
                         style="background-image: url('../static/images/project/todo-list.png')">
                         <div class="project-actions project-bg">
-                            <i class="fas fa-desktop"></i>Live
-                            <i class="fas fa-code"></i>Repo
-                            <i class="fas fa-camera"></i>Info
+                            <a class="project-action" href="https://drg-jquery-todo.herokuapp.com" target="_blank"><i class="fas fa-desktop"></i>Live</a>
+                            <a class="project-action" href="https://github.com/drewgoodman/jQuery-ToDoList" target="_blank"><i class="fas fa-code"></i>Repo</a>
+                            <a class="project-action" href="#"><i class="fas fa-camera"></i>Info</a>
                         </div>
                         <div class="project-title">jQuery To-Do List</div>
                         <span class="project-divider"></span>
                         <span class="project-shader"></span>
-                        <div class="project-desc project-bg">Basic to-do list with completion tab an</div>
+                        <div class="project-desc project-bg">Basic to-do list app with complete and delete functions.</div>
                         <div class="project-skills-wrapper">
-                            <div class="project-skill">HTML5</div>
-                            <div class="project-skill">CSS3</div>
-                            <div class="project-skill">jQuery</div>
+                            <div class="project-skill no-select">HTML5</div>
+                            <div class="project-skill no-select">CSS3</div>
+                            <div class="project-skill no-select">jQuery</div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="page-content" id="contact">
