--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/d58eb19ed0.js"></script>
     <script src="scripts/nav.js"></script>
     <script src="scripts/portfolio.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Special+Elite|Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Special+Elite|Share+Tech+Mono|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/portfolio.css">
