reformatted portfolio cards

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <h2>I'm a Full Stack Web Developer.</h2>
                     </div>
                     <div class="home-buttons">
-                        <a id="viewworks-btn" class="home-btn" href="#portfolio">View Works</a>
+                        <a id="viewworks-btn" class="home-btn" href="#portfolio">See projects</a>
                         <a id="getintouch-btn" class="home-btn" href="#contact">Get in touch</a>
                     </div>
                 </div>
