mobile styles for portfolio cards

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <div class="profile-contact">
             <div class="profile-contact-icons">
                 <a class="contact-link" href='https://www.linkedin.com/in/drew-r-goodman' target="_blank"><i
-                        class="fab fa-linkedin"></i></a>
+                        class="fab fa-linkedin-in"></i></a>
                 <a class="contact-link" href='https://github.com/drewgoodman' target="_blank"><i
                         class="fab fa-github"></i></a>
-                <a class="contact-link" href='mailto:drg6525@yahoo.com'><i class="fas fa-envelope-square"></i></a>
+                <a class="contact-link" href='mailto:drg6525@yahoo.com'><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </div>
