added python games

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div id="home">
                 <div class="home-wrapper home-shader no-select">
                     <div class="home-intro-text">
-                        <h1>Hi there, my name is Drew.</h1>
+                        <h1>Hi there, my name's Drew.</h1>
                     </div>
                     <div class="home-intro-text">
                         <h2>I'm a Full Stack Web Developer.</h2>
