more mobile fixes

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             </div>
             <div class="page-content" id="skills">
                 <h3>About Me</h3>
+                <p>This site is still a work in progress. Please check back soon!</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
                     aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
                     tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
