--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@
         <img class="profile-pic" src="static/images/profile.jpg">
         <div class="profile-title profile-text">
             <div class="profile-name">Drew R. Goodman //</div>
-            <div class="profile-job"> Full Stack Web Developer</div>
+            <div class="profile-job"> Full Stack Developer</div>
+            <div class="profile-desc">Junior developer with strong analytical skills and a goal-oriented approach to application design and debugging. Experienced in React.js, Python, and SQL databases.</div>
         </div>
         <div class="profile-item profile-links profile-text">
             <a href='#home'>Home</a>
-            <a href='#skills'>Skills</a>
             <a href='#portfolio'>Portfolio</a>
+            <a href='#skills'>Resume</a>
             <a href='#contact'>Contact Me</a>
         </div>
         <div class="profile-contact">
@@ -89,7 +90,7 @@
                     </div>
                 </div>
             </div>
-            <div class="page-content" id="skills">
+            <!-- <div class="page-content" id="skills">
                 <h3>About Me</h3>
                 <p>This site is still a work in progress. Please check back soon!</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
@@ -103,18 +104,7 @@
                     placeat ratione totam quas sit temporibus voluptatum deserunt ipsa, ut adipisci id. Est quos
                     exercitationem facere cupiditate consequatur suscipit officia quia!</p>
                 <br><br><br>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
-                    aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
-                    tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
-                    deserunt porro. Tenetur odit sunt omnis quia nisi iusto architecto recusandae exercitationem animi
-                    tempora? Corrupti odit dolor dicta itaque, quas voluptas aspernatur, sequi porro accusantium nemo,
-                    fuga fugiat numquam? Exercitationem nisi beatae aliquid sed sit omnis nulla eveniet, dolorem non
-                    optio a expedita fugiat cumque aut ducimus officiis, in accusamus sint! Eligendi tempora natus ipsam
-                    vitae illo voluptates itaque harum sapiente numquam reprehenderit excepturi quo beatae animi eum
-                    placeat ratione totam quas sit temporibus voluptatum deserunt ipsa, ut adipisci id. Est quos
-                    exercitationem facere cupiditate consequatur suscipit officia quia!</p>
-                <br><br><br>
-            </div>
+            </div> -->
             <div class="page-content off-white" id="portfolio">
                 <h3>Recent Works</h3>
                 <div id="projects-container">
