new styles for sidebar and spacing

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <div class="profile-desc">Junior developer with strong analytical skills and a goal-oriented approach to application design and debugging. Experienced in React.js, Python, and SQL databases.</div>
         </div>
         <div class="profile-item profile-links profile-text">
-            <a href='#home'>Home</a>
-            <a href='#portfolio'>Portfolio</a>
-            <a href='#skills'>Resume</a>
-            <a href='#contact'>Contact Me</a>
+            <a class="profile-link" href='#home'><i class="fas fa-home"></i>Home</a>
+            <a class="profile-link"  href='#portfolio'><i class="fas fa-laptop-code"></i>Portfolio</a>
+            <a class="profile-link"  href='#skills'><i class="fas fa-paperclip"></i>Resume</a>
+            <a class="profile-link"  href='#contact'><i class="fas fa-phone"></i>Contact Me</a>
         </div>
         <div class="profile-contact">
             <div class="profile-contact-icons">
