style tweaks / unblur after link press / resume uploaded

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         <div class="profile-item profile-links profile-text">
             <a class="profile-link" href='#home'><i class="fas fa-home"></i>Home</a>
             <a class="profile-link"  href='#portfolio'><i class="fas fa-laptop-code"></i>Portfolio</a>
-            <a class="profile-link"  href='#skills'><i class="fas fa-paperclip"></i>Resume</a>
+            <a class="profile-link"  href='download/drgoodman_resume.pdf' download><i class="fas fa-paperclip"></i>Resume</a>
             <a class="profile-link"  href='#contact'><i class="fas fa-phone"></i>Contact Me</a>
         </div>
         <div class="profile-contact">
-            <div class="profile-contact-icons">
-                <a class="contact-link" href='https://www.linkedin.com/in/drew-r-goodman' target="_blank"><i
-                        class="fab fa-linkedin-in"></i></a>
+            <div class="profile-contact-icons profile-text">
+                <a class="contact-link" href='https://www.linkedin.com/in/drew-r-goodman' target="_blank">
+                    <i class="fab fa-linkedin-in"></i></a>
                 <a class="contact-link" href='https://github.com/drewgoodman' target="_blank"><i
                         class="fab fa-github"></i></a>
                 <a class="contact-link" href='mailto:drg6525@yahoo.com'><i class="fas fa-envelope"></i></a>
@@ -129,17 +129,8 @@
                 </div>
             </div>
             <div class="page-content" id="contact">
-                <h3>Get in Touch?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
-                    aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
-                    tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
-                    deserunt porro. Tenetur odit sunt omnis quia nisi iusto architecto recusandae exercitationem animi
-                    tempora? Corrupti odit dolor dicta itaque, quas voluptas aspernatur, sequi porro accusantium nemo,
-                    fuga fugiat numquam? Exercitationem nisi beatae aliquid sed sit omnis nulla eveniet, dolorem non
-                    optio a expedita fugiat cumque aut ducimus officiis, in accusamus sint! Eligendi tempora natus ipsam
-                    vitae illo voluptates itaque harum sapiente numquam reprehenderit excepturi quo beatae animi eum
-                    placeat ratione totam quas sit temporibus voluptatum deserunt ipsa, ut adipisci id. Est quos
-                    exercitationem facere cupiditate consequatur suscipit officia quia!</p>
+                <h3>Want in Touch?</h3>
+                <p>Thanks for visiting!</p>
                 <br><br><br>
             </div>
             <div class="page-footer">
