fixed mobile links bug / adjusted lightbox height scaling

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="page-content" id="contact">
-                <h3>Want in Touch?</h3>
+                <h3>Want get in Touch?</h3>
                 <p>Thanks for visiting!</p>
                 <br><br><br>
             </div>
