--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="profile-title profile-text">
             <div class="profile-name">Drew R. Goodman //</div>
             <div class="profile-job"> Full Stack Developer</div>
-            <div class="profile-desc">Junior developer with strong analytical skills and a goal-oriented approach to application design and debugging. Experienced in React.js, Python, and SQL databases.</div>
+            <div class="profile-desc">Junior developer from Portland, Oregon with strong analytical skills and a goal-oriented approach to application design and debugging. Experienced in React.js, Python, and SQL databases.</div>
         </div>
         <div class="profile-item profile-links profile-text">
             <a class="profile-link" href='#home'><i class="fas fa-home"></i>Home</a>
@@ -129,8 +129,9 @@
                 </div>
             </div>
             <div class="page-content" id="contact">
-                <h3>Want get in Touch?</h3>
+                <h3>Want to get in Touch?</h3>
                 <p>Thanks for visiting!</p>
+                <p>Still need to add stuff here.</p>
                 <br><br><br>
             </div>
             <div class="page-footer">
