contact style change test / minor cleanup

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/lightbox.css">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/sidebar.css">
@@ -22,7 +23,6 @@
 </head>
 
 <body>
-    <!-- Buttons go here -->
     <div id="menu-toggle" class="nav-btn">
         <span class="line top"></span>
         <span class="line middle"></span>
@@ -56,16 +56,19 @@
         <div class="profile-title profile-text">
             <div class="profile-name">Drew R. Goodman //</div>
             <div class="profile-job"> Full Stack Developer</div>
-            <div class="profile-desc">Junior developer from Portland, Oregon with strong analytical skills and a goal-oriented approach to application design and debugging. Experienced in React.js, Python, and SQL databases.</div>
+            <div class="profile-desc">Junior developer from Portland, Oregon passionate about UX, application design,
+                and debugging. Currently experienced with React.js, jQuery, Python, and SQL databases.</div>
         </div>
         <div class="profile-item profile-links profile-text">
             <a class="profile-link" href='#home'><i class="fas fa-home"></i>Home</a>
-            <a class="profile-link"  href='#portfolio'><i class="fas fa-laptop-code"></i>Portfolio</a>
-            <a class="profile-link"  href='download/drgoodman_resume.pdf' download><i class="fas fa-paperclip"></i>Resume</a>
-            <a class="profile-link"  href='#contact'><i class="fas fa-phone"></i>Contact Me</a>
+            <a class="profile-link" href='#portfolio'><i class="fas fa-laptop-code"></i>Portfolio</a>
+            <a class="profile-link" href='download/drgoodman_resume.pdf' download><i
+                    class="fas fa-paperclip"></i>Resume</a>
         </div>
-        <div class="profile-contact">
-            <div class="profile-contact-icons profile-text">
+
+        <div class="profile-contact profile-text">
+            <div class="profile-link"><i class="fas fa-phone"></i>Contact Me</div>
+            <div class="profile-contact-icons">
                 <a class="contact-link" href='https://www.linkedin.com/in/drew-r-goodman' target="_blank">
                     <i class="fab fa-linkedin-in"></i></a>
                 <a class="contact-link" href='https://github.com/drewgoodman' target="_blank"><i
@@ -90,57 +93,27 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="page-content" id="skills">
-                <h3>About Me</h3>
-                <p>This site is still a work in progress. Please check back soon!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nisi sed qui molestias, laudantium
-                    aut veniam provident iste est maiores earum ut placeat, voluptates mollitia inventore consequatur
-                    tempore unde eveniet quidem necessitatibus. Eveniet sed qui molestiae cum temporibus expedita
-                    deserunt porro. Tenetur odit sunt omnis quia nisi iusto architecto recusandae exercitationem animi
-                    tempora? Corrupti odit dolor dicta itaque, quas voluptas aspernatur, sequi porro accusantium nemo,
-                    fuga fugiat numquam? Exercitationem nisi beatae aliquid sed sit omnis nulla eveniet, dolorem non
-                    optio a expedita fugiat cumque aut ducimus officiis, in accusamus sint! Eligendi tempora natus ipsam
-                    vitae illo voluptates itaque harum sapiente numquam reprehenderit excepturi quo beatae animi eum
-                    placeat ratione totam quas sit temporibus voluptatum deserunt ipsa, ut adipisci id. Est quos
-                    exercitationem facere cupiditate consequatur suscipit officia quia!</p>
-                <br><br><br>
-            </div> -->
             <div class="page-content off-white" id="portfolio">
                 <h3>Recent Works</h3>
                 <div id="projects-container">
-                    <!-- PLACEHOLDER FOR JAVASCRIPT REFERENCE -->
-                    <!-- <div class="project-wrapper"
-                        style="background-image: url('../static/images/project/todo-list.png')">
-                        <div class="project-actions project-bg">
-                            <a class="project-action" href="https://drg-jquery-todo.herokuapp.com" target="_blank"><i class="fas fa-desktop"></i>Live</a>
-                            <a class="project-action" href="https://github.com/drewgoodman/jQuery-ToDoList" target="_blank"><i class="fas fa-code"></i>Repo</a>
-                            <a class="project-action" href="#"><i class="fas fa-camera"></i>Info</a>
-                        </div>
-                        <div class="project-title">jQuery To-Do List</div>
-                        <span class="project-divider"></span>
-                        <span class="project-shader"></span>
-                        <div class="project-desc project-bg">Basic to-do list app with complete and delete functions.</div>
-                        <div class="project-skills-wrapper">
-                            <div class="project-skill no-select">HTML5</div>
-                            <div class="project-skill no-select">CSS3</div>
-                            <div class="project-skill no-select">jQuery</div>
-                        </div>
-                    </div> -->
                 </div>
             </div>
-            <div class="page-content" id="contact">
-                <h3>Want to get in Touch?</h3>
-                <p>Thanks for visiting!</p>
-                <p>Still need to add stuff here.</p>
-                <br><br><br>
-            </div>
+            <!-- <div id="contact" class="page-content">
+                <center><h3>Want to get in touch?</h3></center>
+                <div class="two-column">
+                    <div class="column">
+                        <p>Thanks for visiting! If you see something you're interested in or have any questions, feel
+                            free to contact me via <b>LinkedIn</b> or by <b>e-mail</b>. Please use one of the links before or fill out the contact form and I will respond to you as soon as I can.</p>
+                        <p>I am currently looking for <b>internship</b> or <b>entry level</b> opportunities.</p>
+                    </div>
+
+                </div>
+            </div> -->
             <div class="page-footer">
                 &copy; 2020 Drew Goodman &#124; All rights reserved
             </div>
         </div>
     </div>
-
-    <!-- Portfolio -->
 </body>
 
 </html>
