--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="home-buttons">
                         <a id="viewworks-btn" class="home-btn" href="#portfolio">See projects</a>
-                        <a id="getintouch-btn" class="home-btn" href="#contact">Get in touch</a>
+                        <!-- <a id="getintouch-btn" class="home-btn" href="#contact">Get in touch</a> -->
                     </div>
                 </div>
             </div>
