--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:title" content="Drew Goodman | Full Stack Developer">
+    <meta property="og:description" content="My portfolio site, featuring works in React.js, jQuery, Python, and SCSS.">
+    <meta property="og:image" content="static/images/meta_img.jpg">
+    <meta property="og:url" content="https://drewgoodman.github.io">
     <title>Drew R. Goodman | Full Stack Developer</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/d58eb19ed0.js"></script>
