minor updates based on feedback

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property="og:title" content="Drew Goodman | Full Stack Developer">
     <meta property="og:description" content="My portfolio site, featuring works in React.js, jQuery, Python, and SCSS.">
@@ -67,7 +67,7 @@
             <a class="profile-link" href='#home'><i class="fas fa-home"></i>Home</a>
             <a class="profile-link" href='#portfolio'><i class="fas fa-laptop-code"></i>Portfolio</a>
             <a class="profile-link" href='download/drgoodman_resume.pdf' download><i
-                    class="fas fa-paperclip"></i>Resume</a>
+                    class="fas fa-paperclip"></i>Resume (PDF)</a>
         </div>
 
         <div class="profile-contact profile-text">
