--- a/index.html
+++ b/index.html
@@ -2,22 +2,36 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164925364-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-164925364-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv=" X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Drew R. Goodman" />
     <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
     <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Drew Goodman | Full Stack Developer" />
-    <meta prefix="og: http://ogp.me/ns#" property="og:description" content="My portfolio site, featuring works in React.js, jQuery, Python, and SCSS." />
-    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://drewgoodman.github.io/static/images/meta_img.jpg" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:description"
+        content="My portfolio site, featuring works in React.js, jQuery, Python, and SCSS." />
+    <meta prefix="og: http://ogp.me/ns#" property="og:image"
+        content="https://drewgoodman.github.io/static/images/meta_img.jpg" />
     <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://drewgoodman.github.io" />
     <title>Drew R. Goodman | Full Stack Developer</title>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/d58eb19ed0.js"></script>
     <script src="scripts/portfolio.js"></script>
     <script src="scripts/nav.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oswald|Special+Elite|Share+Tech+Mono|Roboto&display=swap"
         rel="stylesheet" />
+
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/portfolio.css">
@@ -68,8 +82,8 @@
         <div class="profile-item profile-links profile-text">
             <a class="profile-link" href='#home'><i class="fas fa-home"></i>Home</a>
             <a class="profile-link" href='#portfolio'><i class="fas fa-laptop-code"></i>Portfolio</a>
-            <a class="profile-link" href='download/drgoodman_resume.pdf' download><i
-                    class="fas fa-paperclip"></i>Resume (PDF)</a>
+            <a class="profile-link" href='download/drgoodman_resume.pdf' download><i class="fas fa-paperclip"></i>Resume
+                (PDF)</a>
         </div>
 
         <div class="profile-contact profile-text">
