new sections / slanted borders alternating colors / started building resume section

--- a/index.html
+++ b/index.html
@@ -113,8 +113,38 @@
                     </div>
                 </div>
             </div>
-            <div class="page-content off-white" id="portfolio">
-                <h3>Recent Works</h3>
+            <div class="page-content" id="skills">
+                <h3>My Skills</h3>
+            </div>
+            <div class="page-content off-white" id="resume">
+                <h3>Resume</h3>
+                <div class="two-column">
+                    <div class="resume-card card-shadow">
+                        <div class="resume-header">
+
+                        </div>
+                        <div class="resume-icon">
+
+                        </div>
+                        <div class="resume-title">
+                            Graphic Version
+                        </div>
+                        <div class="resume-buttons-wrapper">
+                            <div class="resume-button">
+                                Open in new window
+                            </div>
+                            <div class="resume-button">
+                                Download (40kb)
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="page-content" id="portfolio-client">
+                <h3>Professional Projects</h3>
+            </div>
+            <div class="page-content off-white" id="portfolio-personal">
+                <h3>Personal Projects</h3>
                 <div id="projects-container">
                 </div>
             </div>
