resume card layout set

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/sidebar.css">
     <link rel="stylesheet" href="styles/media.css">
+    <link rel="stylesheet" href="styles/resume.css">
 </head>
 
 <body>
@@ -124,16 +125,16 @@
 
                         </div>
                         <div class="resume-icon">
-
+                            <i class="far fa-file-word"></i>
                         </div>
                         <div class="resume-title">
-                            Graphic Version
+                            Text Version (*.docx)
                         </div>
-                        <div class="resume-buttons-wrapper">
-                            <div class="resume-button">
+                        <div class="resume-btn-wrapper">
+                            <div class="resume-btn">
                                 Open in new window
                             </div>
-                            <div class="resume-button">
+                            <div class="resume-btn">
                                 Download (40kb)
                             </div>
                         </div>
