--- a/index.html
+++ b/index.html
@@ -117,13 +117,38 @@
             <div class="page-content" id="skills">
                 <h3>My Skills</h3>
             </div>
-            <div class="page-content off-white" id="resume">
-                <h3>Resume</h3>
-                <div class="two-column">
-                    <div class="resume-card card-shadow">
-                        <div class="resume-header">
-
+            <div class="page-content" id="portfolio-client">
+                <h3>Professional Projects</h3>
+            </div>
+            <div class="page-content" id="portfolio-personal">
+                <h3>Personal Projects</h3>
+                <div id="projects-container">
+                </div>
+            </div>
+            <div class="page-content" id="resume">
+                <h3>View Resume</h3>
+                <div class="resume-wrapper">
+                    <div class="resume-card" id="resume-graphic">
+                        <div class="resume-header"></div>
+                        <div class="resume-icon">
+                            <i class="fas fa-file-pdf"></i>
                         </div>
+                        <div class="resume-title">
+                            Graphic Version (*.pdf)
+                        </div>
+                        <div class="resume-btn-wrapper">
+                            <div class="resume-btn">
+                                <i class="far fa-folder-open"></i>
+                                Open in new window
+                            </div>
+                            <div class="resume-btn">
+                                <i class="fas fa-download"></i>
+                                Download (40kb)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="resume-card" id="resume-text">
+                        <div class="resume-header"></div>
                         <div class="resume-icon">
                             <i class="far fa-file-word"></i>
                         </div>
@@ -132,21 +157,15 @@
                         </div>
                         <div class="resume-btn-wrapper">
                             <div class="resume-btn">
+                                <i class="far fa-folder-open"></i>
                                 Open in new window
                             </div>
                             <div class="resume-btn">
+                                <i class="fas fa-download"></i>
                                 Download (40kb)
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="page-content" id="portfolio-client">
-                <h3>Professional Projects</h3>
-            </div>
-            <div class="page-content off-white" id="portfolio-personal">
-                <h3>Personal Projects</h3>
-                <div id="projects-container">
                 </div>
             </div>
             <!-- <div id="contact" class="page-content">
