mobile stylings for resume download cards

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
         <div class="profile-item profile-links profile-text">
             <a class="profile-link" href='#home'><i class="fas fa-home"></i>Home</a>
             <a class="profile-link" href='#portfolio-personal'><i class="fas fa-laptop-code"></i>Portfolio</a>
-            <a class="profile-link" href='download/drgoodman_resume.pdf' download><i class="fas fa-paperclip"></i>Resume
-                (PDF)</a>
+            <a class="profile-link" href='#resume'><i class="fas fa-paperclip"></i>Resume</a>
         </div>
 
         <div class="profile-contact profile-text">
